objects/LAT_ClientByRegion__c.object
<CustomObject>
    <fields>
        <fullName>LAT_Channel__c</fullName>
        <label>Canal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On Trade</fullName>
                </value>
                <value>
                    <fullName>Off Trade</fullName>
                </value>
                <value>
                    <fullName>CCE</fullName>
                    <isActive>false</isActive>
                    <label>CCE</label>
                </value>
                <value>
                    <fullName>DFR</fullName>
                    <isActive>false</isActive>
                    <label>DFR</label>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                    <isActive>false</isActive>
                    <label>Distribution</label>
                </value>
                <value>
                    <fullName>Eventos</fullName>
                    <isActive>false</isActive>
                    <label>Eventos</label>
                </value>
                <value>
                    <fullName>Eventos_ARG</fullName>
                    <isActive>false</isActive>
                    <label>Eventos_ARG</label>
                </value>
                <value>
                    <fullName>FEX</fullName>
                    <isActive>false</isActive>
                    <label>FEX</label>
                </value>
                <value>
                    <fullName>NFI</fullName>
                    <isActive>false</isActive>
                    <label>NFI</label>
                </value>
                <value>
                    <fullName>OTR</fullName>
                    <isActive>false</isActive>
                    <label>OTR</label>
                </value>
                <value>
                    <fullName>Off-Trade_ARG</fullName>
                    <isActive>false</isActive>
                    <label>Off-Trade_ARG</label>
                </value>
                <value>
                    <fullName>On-Trade_ARG</fullName>
                    <isActive>false</isActive>
                    <label>On-Trade_ARG</label>
                </value>
                <value>
                    <fullName>Restaurante</fullName>
                    <isActive>false</isActive>
                    <label>Restaurante</label>
                </value>
                <value>
                    <fullName>SS</fullName>
                    <isActive>false</isActive>
                    <label>SS</label>
                </value>
                <value>
                    <fullName>TC</fullName>
                    <isActive>false</isActive>
                    <label>TC</label>
                </value>
                <value>
                    <fullName>WS</fullName>
                    <isActive>false</isActive>
                    <label>WS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_Planejado__c</fullName>
        <label>Planejado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Perfil</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UDC__c.CodProd__c</field>
                <operation>equals</operation>
                <value>01</value>
            </filterItems>
            <filterItems>
                <field>UDC__c.CodUs__c</field>
                <operation>equals</operation>
                <value>18</value>
            </filterItems>
            <filterItems>
                <field>UDC__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>BRA Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UDC__c</referenceTo>
        <relationshipLabel>Clientes por Regional (Perfil)</relationshipLabel>
        <relationshipName>Clientes_por_Regional1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_Realizado__c</fullName>
        <label>Realizado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_RegionalClientOnPremise__c</fullName>
        <label>Regional Cliente On Premise</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>REG CO</fullName>
                </value>
                <value>
                    <fullName>REG NE</fullName>
                </value>
                <value>
                    <fullName>REG NO</fullName>
                </value>
                <value>
                    <fullName>REG SE</fullName>
                </value>
                <value>
                    <fullName>REG SPC</fullName>
                </value>
                <value>
                    <fullName>REG SPI</fullName>
                </value>
                <value>
                    <fullName>REG SUL</fullName>
                </value>
                <value>
                    <fullName>REG DRINKS AND CO</fullName>
                </value>
                <value>
                    <fullName>REG PRESTIGE</fullName>
                </value>
                <value>
                    <fullName>REG CONOSUL</fullName>
                    <isActive>false</isActive>
                    <label>REG CONOSUL</label>
                </value>
                <value>
                    <fullName>REG MATRIZ</fullName>
                    <isActive>false</isActive>
                    <label>REG MATRIZ</label>
                </value>
                <value>
                    <fullName>REG MODERN TRADE KA</fullName>
                    <isActive>false</isActive>
                    <label>REG MODERN TRADE KA</label>
                </value>
                <value>
                    <fullName>REG MODERN TRADE VR</fullName>
                    <isActive>false</isActive>
                    <label>REG MODERN TRADE VR</label>
                </value>
                <value>
                    <fullName>REG SP</fullName>
                    <isActive>false</isActive>
                    <label>REG SP</label>
                </value>
                <value>
                    <fullName>REG SUD</fullName>
                    <isActive>false</isActive>
                    <label>REG SUD</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_RegionalManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsable Regional</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Clientes_por_Regional</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_RegionalSupervisor2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsável</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ClientesPorRegional</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_RegionalSupervisorName__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; +  LAT_RegionalSupervisor__r.Supervisor__c , LAT_RegionalSupervisor__r.Supervisor__r.FirstName + &apos; &apos; + LAT_RegionalSupervisor__r.Supervisor__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Responsável Regional</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_RegionalSupervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsable Regional</label>
        <referenceTo>LAT_RegionalSupervisor__c</referenceTo>
        <relationshipLabel>Clientes por Regional</relationshipLabel>
        <relationshipName>Clientes_por_Regional</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_Regional__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Regional de Vendas</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UDC__c.Internal_Id__c</field>
                <operation>contains</operation>
                <value>01-01</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UDC__c</referenceTo>
        <relationshipLabel>Clientes por Regional</relationshipLabel>
        <relationshipName>LAT_ClienteByRegion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_Remaining__c</fullName>
        <formula>IF (NOT(ISNULL(LAT_Realizado__c)), LAT_Planejado__c -  LAT_Realizado__c,  LAT_Planejado__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pendente</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Segmento</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UDC__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>BRA Standard</value>
            </filterItems>
            <filterItems>
                <field>UDC__c.CodUs__c</field>
                <operation>equals</operation>
                <value>03</value>
            </filterItems>
            <filterItems>
                <field>UDC__c.CodProd__c</field>
                <operation>equals</operation>
                <value>01</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UDC__c</referenceTo>
        <relationshipLabel>Clientes por Regional (Segmento)</relationshipLabel>
        <relationshipName>Clientes_por_Regional</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Validado</fullName>
                </value>
                <value>
                    <fullName>Pendente</fullName>
                    <default>true</default>
                    <label>Pendente</label>
                </value>
                <value>
                    <fullName>Em validação</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_Sub_Channel__c</fullName>
        <label>Sub-Canal</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bar</fullName>
                </value>
                <value>
                    <fullName>Bar Agitado</fullName>
                </value>
                <value>
                    <fullName>Casa noturna</fullName>
                </value>
                <value>
                    <fullName>Restaurante</fullName>
                </value>
                <value>
                    <fullName>Table Dance</fullName>
                </value>
                <value>
                    <fullName>Atacadista</fullName>
                </value>
                <value>
                    <fullName>Atacados</fullName>
                </value>
                <value>
                    <fullName>C&amp;C</fullName>
                </value>
                <value>
                    <fullName>Delicatessen</fullName>
                </value>
                <value>
                    <fullName>Distribuidor</fullName>
                </value>
                <value>
                    <fullName>Eventos</fullName>
                </value>
                <value>
                    <fullName>KA</fullName>
                </value>
                <value>
                    <fullName>Varejo Regional</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Outros</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Specialized Retail</fullName>
                </value>
                <value>
                    <fullName>Border_URU</fullName>
                    <isActive>false</isActive>
                    <label>Border_URU</label>
                </value>
                <value>
                    <fullName>Convinence Stores_ARG</fullName>
                    <isActive>false</isActive>
                    <label>Convinence Stores_ARG</label>
                </value>
                <value>
                    <fullName>Convinence Stores_URU</fullName>
                    <isActive>false</isActive>
                    <label>Convinence Stores_URU</label>
                </value>
                <value>
                    <fullName>Direct On-Trade_ARG</fullName>
                    <isActive>false</isActive>
                    <label>Direct On-Trade_ARG</label>
                </value>
                <value>
                    <fullName>Direct On-Trade_URU</fullName>
                    <isActive>false</isActive>
                    <label>Direct On-Trade_URU</label>
                </value>
                <value>
                    <fullName>Distribuitors_ARG</fullName>
                    <isActive>false</isActive>
                    <label>Distribuitors_ARG</label>
                </value>
                <value>
                    <fullName>Distribuitors_URU</fullName>
                    <isActive>false</isActive>
                    <label>Distribuitors_URU</label>
                </value>
                <value>
                    <fullName>Events_ARG</fullName>
                    <isActive>false</isActive>
                    <label>Events_ARG</label>
                </value>
                <value>
                    <fullName>Indirect On-Trade_ARG</fullName>
                    <isActive>false</isActive>
                    <label>Indirect On-Trade_ARG</label>
                </value>
                <value>
                    <fullName>Indirect On-Trade_URU</fullName>
                    <isActive>false</isActive>
                    <label>Indirect On-Trade_URU</label>
                </value>
                <value>
                    <fullName>Liquor Stores_URU</fullName>
                    <isActive>false</isActive>
                    <label>Liquor Stores_URU</label>
                </value>
                <value>
                    <fullName>POS Supermarket_ARG</fullName>
                    <isActive>false</isActive>
                    <label>POS Supermarket_ARG</label>
                </value>
                <value>
                    <fullName>POS Wholesaler_ARG</fullName>
                    <isActive>false</isActive>
                    <label>POS Wholesaler_ARG</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_TaskCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Atividade criada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_UF__c</fullName>
        <label>UF</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotional_Action__c</fullName>
        <label>Ação Promocional</label>
        <referenceTo>LAT_PromotionalAction__c</referenceTo>
        <relationshipLabel>Clientes por Regional</relationshipLabel>
        <relationshipName>Clientes_por_Regional</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Cliente por Regional</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Id Cliente por Regional</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clientes por Regional</pluralLabel>
    <recordTypes>
        <fullName>LAT_OffTrade</fullName>
        <active>true</active>
        <label>Off Trade</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_OnTrade</fullName>
        <active>true</active>
        <label>On Trade</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>